modify date input event triggers to fix bug where input click is required twice on mobile to open datepicker

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -949,6 +949,7 @@ main {
       line-height: 1.5;
       padding-block: 0.25rem;
       padding-inline: 1rem;
+      text-align: start;
       
       &:focus,
       &:focus-visible {
